--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "vsporte-test",
   "version": "0.1.0",
-  "private": true,
+  "private": "false",
+  "homepage": "https://jackyapa6eu.github.io/VSporte-test/",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -32,6 +35,7 @@
   "devDependencies": {
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-alias": "^1.1.2"
+    "eslint-import-resolver-alias": "^1.1.2",
+    "gh-pages": "^6.1.1"
   }
 }
